# dharma-os-ai-agent

./: Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.json
data/: company_state.json
server/: app.py
server/data/: company_state.json
